--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest --silent",
     "lint": "eslint \"src/**/*.ts\"",
-    "build": "tsc"
+    "build": "tsc",
+    "yalc": "yarn build && yalc push"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
